--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,9 @@
   "extends": [
     "airbnb",
     "eslint:recommended",
-    "prettier",
-    "prettier/react"
+    "plugin: react/recommended",
+    "plugin: import/errors",
+    "plugin: import/warnings"
   ],
   "env": {
     "node": true,
@@ -29,8 +30,8 @@
     "one-var": 1,
     "one-var-declaration-per-line": 1,
     "new-cap": 1,
-    "no-trailing-spaces": 0,
+    "no-trailing-spaces": 1,
     "comma-dangle": 0,
-    "consistent-return": 1
+    "consistent-return": 1,
   }
 }
