--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
   "presets": [
-    "es2015, react, stage-2"
+    "airbnb"
   ],
   "plugins": [
-    "transform-class-properties",
-    "transform-es2015-destructuring",
     "transform-object-rest-spread"
   ]
 }
