--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,6 @@
     "new-cap": 1,
     "no-trailing-spaces": 1,
     "comma-dangle": 0,
-    "consistent-return": 1,
+    "consistent-return": 1
   }
 }
