Make createRideOffer method for creating a new ride offer

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no tdest specified\" && exit 1",
-    "dev": "nodemon server/app.js --exec babel-node",
+    "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
     "lint": "eslint server --fix"
   },
