--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "coveralls": "^3.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "merge-descriptors": "^1.0.1",
@@ -44,7 +45,6 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-jsx-ally": "^6.0.2",
     "eslint-plugin-react": "^7.9.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5"
