--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha -w server/test/**/*.spec.js --require babel-register",
     "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
-    "lint": "eslint server --fix"
+    "lint": "eslint server --fix",
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,6 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "coveralls": "^3.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "merge-descriptors": "^1.0.1",
@@ -41,12 +42,15 @@
     "babel-preset-airbnb": "^2.5.1",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "mocha": "^5.2.0",
-    "nodemon": "^1.17.5"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.17.5",
+    "nyc": "^12.0.2"
   }
 }
