--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "nyc": "^12.0.2"
   },
   "scripts": {
-    "test": "mocha server/test/**/*.spec.js --require babel-register",
+    "test": "mocha server/test/**/*.spec.js --require babel-register --timeout 10000 --exit",
     "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
     "lint": "eslint server --fix",
