--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2"
   },
   "scripts": {
-    "test": "mocha server/test/**/*.spec.js --require babel-register --timeout 10000 --exit",
+    "test": "nyc mocha server/test/**/*.spec.js --require babel-register --timeout 10000 --exit",
     "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
     "lint": "eslint server --fix",
