--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "ride-my-way",
   "version": "1.0.0",
-  "description": "",
+  "description": "Carpooling Application",
   "main": "index.js",
+  "engines": {
+    "node": "8.11.2"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
