--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,17 @@ node_js:
   "stable"
 
 before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
+  - npm install codeclimate-test-reporter
   - npm install
 
-script: 
+script:
   - npm run test
 
 after_success:
   - npm run coverage
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - codeclimate-test-reporter < ./coverage/lcov.info
 
 ##safelist
 branches:
