--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,21 @@ node_js:
   "stable"
 
 before_script:
-  - npm install codeclimate-test-reporter
+  - yarn global add nyc
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build --debug
   - npm install
 
 script:
   - npm run test
+  - nyc --reporter=lcov yarn run unit
 
 after_success:
   - npm run coverage
 
 after_script:
-  - codeclimate-test-reporter < ./coverage/lcov.info
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 ##safelist
 branches:
