--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ node_js:
   "stable"
 
 before_script:
-  - yarn global add nyc
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build --debug
+  # - yarn global add nyc
+  # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  # - chmod +x ./cc-test-reporter
+  # - ./cc-test-reporter before-build --debug
+  - npm install codeclimate-test-reporter -g
   - npm install
 
 script:
@@ -21,7 +22,8 @@ after_success:
   - npm run coverage
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  # - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - codeclimate-test-reporter < ./coverage/lcov.info
 
 ##safelist
 branches:
