Send coverage report to code climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   # - chmod +x ./cc-test-reporter
   # - ./cc-test-reporter before-build --debug
-  - npm install codeclimate-test-reporter -g
+  - npm install codeclimate-test-reporter istanbul -g
   - npm install
 
 script:
