--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,14 @@ before_script:
   # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   # - chmod +x ./cc-test-reporter
   # - ./cc-test-reporter before-build --debug
-  - npm install codeclimate-test-reporter istanbul -g
+  - npm install codeclimate-test-reporter -g
   - npm install
 
 script:
   - npm run test
 
 after_success:
-  - npm run coverage
+  - npm run coveralls
 
 after_script:
   # - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
