--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
     "lint": "eslint server --fix",
-    "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test"
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
