ft(Database): setup database using postgres
- create db.js file in the models folder
- install node-postgresql(pg) to connect node to postgres
- create config in the db.js file to connect to postgres locally
- make config available for use in the api-endpoints

[(Delivers) #158650357]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 
-addons:
-  code-climate:
-    repo_token: ba269ec96691d5b3e128f92e85a71763e4c1dfec9c7435cdd55f6e0b1d6a9d8d
+env:
+  global:
+    - CODECLIMATE_REPO_TOKEN= ba269ec96691d5b3e128f92e85a71763e4c1dfec9c7435cdd55f6e0b1d6a9d8d
+   - NODE_ENV=test
 
 node_js:
   "stable"
