--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
     "lint": "eslint server --fix",
+    "migrate": "psql -U postgres -f server/models/index.sql",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
