--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cli-js": "0.0.9",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.2.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "merge-descriptors": "^1.0.1",
