--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cli-js": "0.0.9",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
