--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "nyc": "^12.0.2"
   },
   "scripts": {
-    "test": "nyc mocha server/test/**/*.spec.js --require babel-register --timeout 10000 --exit",
     "start:dev": "nodemon server/app.js --exec babel-node",
     "start": "",
     "build": "babel server -d server/dist",
     "lint": "eslint server --fix",
     "migrate": "psql -U postgres -f server/models/index.sql",
+    "test": "nyc mocha server/test/**/*.spec.js --require babel-register --timeout 10000 --exit",
+    "test:migrate": "psql -U postgres -f server/models/testdb.sql",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
