--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "build": "babel server -d server/dist",
     "lint": "eslint server --fix",
     "migrate": "psql -U postgres -f server/models/index.sql",
-    "test": "nyc mocha server/test/tests.spec.js --require babel-register --exit",
-    "test:watch": "nyc mocha -w server/test/tests.spec.js --require babel-register",
-    "test:localdb": "npm run testdb:migrate && nyc mocha server/test/**/*.spec.js --require babel-register --exit",
+    "test": "nyc mocha server/test/*.spec.js --require babel-register --timeout 300000 --exit",
+    "test:watch": "nyc mocha -w server/test/*.spec.js --require babel-register",
+    "test:localdb": "npm run testdb:migrate && nyc mocha server/test/*.spec.js --require babel-register --timeout 300000 --exit",
     "testdb:migrate": "psql -U postgres -f server/models/testdb.sql",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
