--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 
 env:
   global:
-    - CODECLIMATE_REPO_TOKEN= ba269ec96691d5b3e128f92e85a71763e4c1dfec9c7435cdd55f6e0b1d6a9d8d
+    - CODECLIMATE_REPO_TOKEN=ba269ec96691d5b3e128f92e85a71763e4c1dfec9c7435cdd55f6e0b1d6a9d8d
     - NODE_ENV=test
     - SECRET_KEY=20hiddensecrets
     - PGPORT=5432
@@ -20,8 +20,7 @@ addons:
   postgresql: "9.5"
 
 before_script:
-  - psql -c 'drop database if exists ridemyway_test;' -U postgres
-  - psql -c 'create database if exists ridemyway_test;' -U postgres
+  - psql -c 'create database ridemyway_test;' -U postgres
   - npm install codeclimate-test-reporter -g
   - npm install
 
@@ -31,5 +30,6 @@ script:
 after_success:
   - npm run coveralls
 
-after_script:
+after_script:  
+  - psql -c 'drop database ridemyway_test;' -U postgres
   - codeclimate-test-reporter < ./coverage/lcov.info
