chore(travis-postgres): set database config for test environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: node_js
 env:
   global:
     - CODECLIMATE_REPO_TOKEN=ba269ec96691d5b3e128f92e85a71763e4c1dfec9c7435cdd55f6e0b1d6a9d8d
+    - NODE_ENV=test
     - SECRET_KEY=20hiddensecrets
     - PGPORT=5432
     - PGHOST=localhost
