ft(signup-endpoint): consume sign up endpoint
- add form validation to signup form
- add loading animation while request is being processed
- show registration status
- redirect to sign in page after successfull sign up
- update readme link to api document

[(Delivers) #15921616108]

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "root": true,
-  "extends": ["airbnb"],
+  "extends": [
+    "airbnb"
+  ],
   "env": {
     "node": true,
     "es6": true,
@@ -8,13 +10,14 @@
     "browser": true
   },
   "parserOptions": {
-    "ecmaVersion": 8,
+    "ecmaVersion": 6,
     "ecmaFeatures": {
       "jsx": true,
       "classes": true
     }
   },
   "rules": {
+    "linebreak-style": 0,
     "no-console": "off",
     "indent": 2,
     "trailingComma": false,
@@ -28,7 +31,7 @@
       "error",
       {
         "object": true,
-        "array": false
+        "array": true
       }
     ]
   }
