ft(signup-endpoint): consume sign in endpoint
- add validation to sign in page
- modify the validation for sign up page
- show status of sign in after request is sent
- add lint-all command to fix all linting errors
- delete validate.js file
- redesign user profile page

[(Delivers) #159216107]

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "start": "node server/dist/app.js",
     "build": "babel server -d server/dist",
     "lint": "eslint server --fix",
+    "lint-all": "eslint . --fix",
     "migrate": "psql -U postgres -f server/models/index.sql",
     "test": "nyc mocha server/test/*.spec.js --require babel-register --timeout 300000 --exit",
     "test:watch": "nyc mocha -w server/test/*.spec.js --require babel-register",
