--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "test:localdb": "npm run testdb:migrate && nyc mocha server/test/*.spec.js --require babel-register --timeout 300000 --exit",
     "testdb:migrate": "psql -U postgres -f server/models/testdb.sql",
     "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm test",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
